[project]
name = "cozowow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Tavallaie", email = "a.tavallaie@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pycozo[embedded]>=0.7.6",
]

[project.scripts]
cozowow = "cozowow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
